--- a/css/SASS/BUGSS_Styles.scss
+++ b/css/SASS/BUGSS_Styles.scss
@@ -9,17 +9,17 @@
   @return map-get($grays, $key);
 }
 $theme-colors: (
-  "primary": #B13223,//#7a6dd1,
-  "secondary": #1E70BA ,//#d894b8 ,
-  "success": #6e8c45,
+  "primary": #58D883, //green
+  "secondary": #6633FF ,// purple
+  "success": #50b95f,
   "danger": #f44336,
-  "warning": #eb7c0d,
-  "info": #232b75,
-  "light": #FBFBFC,//#F6F6F8,
-  "dark": #21286E,//#221d41,
-  "dark-secondary":#191e4c,
+  "warning": #cda927,
+  "info": #172348,
+  "light": #FFF,//#F6F6F8,
+  "dark": #1e2451,//#221d41,
+  "dark-secondary": #000, //black
   //"grey": #999999,
-  "light-primary": #D49282
+  "light-primary": #cea9da
 );
 //221d41, 313c99, 7a6dd1, d8A5be, F6F6F8
 $body-color: theme-color("dark");
