--- a/css/SASS/BUGSS_Styles.scss
+++ b/css/SASS/BUGSS_Styles.scss
@@ -9,23 +9,25 @@
   @return map-get($grays, $key);
 }
 $theme-colors: (
-  "primary": #58D883, //green
-  "secondary": #6633FF ,// purple
-  "success": #558c7f,
+  "primary": #511f86,
+  "secondary": #7a56e9 ,
+  "success": #518564	,
   "danger": #f44336,
-  "warning": #d27c47,
-  "info": #201527,
-  "light": #FFFEFE,//#F6F6F8,
-  "dark": #210527,//#221d41,
-  "dark-secondary": #AB5381, //black
+  "warning": #ce742b,
+  "info": #313d6e,
+  "light": #ece9f0,//#F6F6F8,
+  "dark": #1c2249,//#221d41,
+  "dark-secondary": #1d214b,
   //"grey": #999999,
-  "light-primary": #58d883
+  "light-primary": #ad98ba
+
+//  1d214b
 );
 //221d41, 313c99, 7a6dd1, d8A5be, F6F6F8
 $body-color: theme-color("dark");
 
 $enable-shadows: true;
-$enable-rounded: false;
+$enable-rounded: true;
 
 
 $border-radius: 0.3rem;
@@ -33,7 +35,7 @@ $border-radius-lg: 0.4rem;
 $border-radius-sm: 0.2rem;
 
 $component-active-bg: theme-color("secondary");
-//@import url('https://fonts.googleapis.com/css?family=Fahkwang|Roboto+Mono|Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fahkwang|Roboto+Mono|Roboto+Slab&display=swap');
 
 //fonts
 $font-family-sans-serif:           'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
