--- a/css/SASS/BUGSS_Styles.scss
+++ b/css/SASS/BUGSS_Styles.scss
@@ -35,7 +35,7 @@ $border-radius-lg: 0.4rem;
 $border-radius-sm: 0.2rem;
 
 $component-active-bg: theme-color("secondary");
-@import url('https://fonts.googleapis.com/css?family=Fahkwang|Roboto+Mono|Roboto+Slab&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Fahkwang|Roboto+Mono|Roboto+Slab&display=swap');
 
 //fonts
 $font-family-sans-serif:           'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
