--- a/css/SASS/BUGSS_Styles.css
+++ b/css/SASS/BUGSS_Styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto|Sen&display=swap");
  /*
 $progress-height: 2rem;
 $progress-bg: theme-color("grey");
@@ -130,7 +131,7 @@ template { display: none; }
 
 [hidden] { display: none !important; }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { margin-bottom: 0.5rem; font-family: "Fahkwang", sans-serif; font-weight: 500; line-height: 1.2; color: #7a56e9; }
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { margin-bottom: 0.5rem; font-family: "Sen", sans-serif; font-weight: 500; line-height: 1.2; color: #7a56e9; }
 
 h1, .h1 { font-size: 2.5rem; }
 
