--- a/css/SASS/BUGSS_Styles.scss
+++ b/css/SASS/BUGSS_Styles.scss
@@ -35,13 +35,14 @@ $border-radius-lg: 0.4rem;
 $border-radius-sm: 0.2rem;
 
 $component-active-bg: theme-color("secondary");
-//@import url('https://fonts.googleapis.com/css?family=Fahkwang|Roboto+Mono|Roboto+Slab&display=swap');
+
+@import url('https://fonts.googleapis.com/css?family=Roboto|Sen&display=swap');
 
 //fonts
 $font-family-sans-serif:           'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-monospace:       "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-$headings-font-family:             'Fahkwang', sans-serif;
+$headings-font-family:             'Sen', sans-serif;
 $headings-color:                   theme-color("secondary");
 
 
