--- a/css/SASS/BUGSS_Styles.scss
+++ b/css/SASS/BUGSS_Styles.scss
@@ -142,3 +142,7 @@ $jumbotron-bg: theme-color("dark");
 .link-light:hover{
   color: theme-color("light-primary")
 }
+.logoNav{
+  height:15vh;
+  min-height: inherit;
+}
