--- a/css/SASS/BUGSS_Styles.css
+++ b/css/SASS/BUGSS_Styles.css
@@ -2784,6 +2784,6 @@ a.text-light-primary:hover, a.text-light-primary:focus { color: #896a9b !importa
 
 .link-light:hover { color: #ad98ba; }
 
-.logoNav { height: 15vh; min-height: inherit; }
+.logoNav { height: 15vh; min-height: 80px; }
 
 /*# sourceMappingURL=BUGSS_Styles.css.map */
